content/en/platform/corda/4.0/open-source/corda-network/UAT.md
---
aliases:
- /releases/release-V4.0/corda-network/uat.html
date: '2020-01-08T09:59:25Z'
menu:
  corda-os-4-0:
    parent: corda-os-4-0-corda-network
    weight: 10
tags:
- UAT
title: 'Corda Network: UAT environment'
---


# Corda Network: UAT environment

For owners of tested CorDapps with a firm plan to take them into production, a bespoke UAT environment is provided by R3 (generally, a commercal agreement will need to be in place). Here, such CorDapps can be further tested in the network configuration they will experience in production, utilising relevant Corda Network Services (including the Identity Operator, and trusted notaries).

Corda UAT is not intended for customers’ full test cycles, as it is expected that the bulk of CorDapp testing will occur in simpler network configurations run by the CorDapp provider, but is available for testing of functionally complete and tested CorDapps in realistic network settings to simulate the real-world business environment, including the production settings of network parameters, Corda network services and supported Corda versions.

UAT is therefore more aligned to the testing of the operational characteristics of networked CorDapps rather than their specific functional features, although we recognise there can be overlap between the two. Realistic test data is therefore expected to be used and may include data copied from production environments and hence representing real world entities and business activities. It will be up to the introducer of such data to ensure that all relevant data protection legislation is complied with and, in particular, that the terms and conditions under which Corda Network Services processes such data is suitable for their needs. All test data will be cleared from Corda Network Services on the completion of testing.
